# reamio

./: .gitignore  Cargo.toml  build.rs  build.sh  devenv.nix  devenv.yaml
devdir/: .gitignore
server/: Cargo.toml
server/src/: error.rs  main.rs  prelude.rs  process.rs
server/src/migrations/per_user/: 20250101233610_init.down.sql  20250101233610_init.up.sql
src/: error.rs  main.rs  pages.rs
src/migrations/per_user/: 20250101233610_init.down.sql  20250101233610_init.up.sql  20250116224819_files_to_process.down.sql
src/migrations/userdb/: 20250101233616_init.down.sql  20250101233616_init.up.sql  20250116224819_files_to_process.up.sql
src/templates/: base.html.jinja  home.html.jinja
ui/: Cargo.toml  build.rs  index.html
ui/slint/: front_page.slint
ui/src/: main.rs  sound.rs
