[package]
name = "reamio"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0-rc.1", features = ["http2", "macros"] }
minijinja = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.42.0", features = ["full"] }

# https://github.com/launchbadge/sqlx#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3
