[package]
name = "reamio"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
futures = "0.3"
minijinja = "2.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.42", features = ["full"] }

# https://github.com/launchbadge/sqlx#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3
