[package]
name = "reamioserver"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros" ] }
bytes = { version = "1.10", features = ["serde"] }
futures = "0.3"
id3 = "1.16"
metaflac = "0.2"
opusmeta = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
