[package]
name = "reamioui"
version = "0.0.0"
edition = "2024"

[dependencies]
rfd = { version = "0.15.3", default-features = false, features = ["ashpd", "tokio", "urlencoding", "xdg-portal"] }
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.11"
ureq = { version = "3.0.11", features = ["brotli", "json"] }

[build-dependencies]
slint-build = "1.11"
